; ModuleID = '/home/carl/AnghaBench/linux/drivers/acpi/extr_bus.c_acpi_driver_match_device.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/acpi/extr_bus.c_acpi_driver_match_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_driver = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_driver_match_device(%struct.device* %0, %struct.device_driver* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_driver*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_driver* %1, %struct.device_driver** %5, align 8
  %6 = load %struct.device_driver*, %struct.device_driver** %5, align 8
  %7 = getelementptr inbounds %struct.device_driver, %struct.device_driver* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %17, label %10

10:                                               ; preds = %2
  %11 = load %struct.device*, %struct.device** %4, align 8
  %12 = call i32 @ACPI_COMPANION(%struct.device* %11)
  %13 = load %struct.device_driver*, %struct.device_driver** %5, align 8
  %14 = getelementptr inbounds %struct.device_driver, %struct.device_driver* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @acpi_of_match_device(i32 %12, i32 %15, i32* null)
  store i32 %16, i32* %3, align 4
  br label %27

17:                                               ; preds = %2
  %18 = load %struct.device*, %struct.device** %4, align 8
  %19 = call i32 @acpi_companion_match(%struct.device* %18)
  %20 = load %struct.device_driver*, %struct.device_driver** %5, align 8
  %21 = getelementptr inbounds %struct.device_driver, %struct.device_driver* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.device_driver*, %struct.device_driver** %5, align 8
  %24 = getelementptr inbounds %struct.device_driver, %struct.device_driver* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @__acpi_match_device(i32 %19, i32 %22, i32 %25, i32* null, i32* null)
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %17, %10
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @acpi_of_match_device(i32, i32, i32*) #1

declare dso_local i32 @ACPI_COMPANION(%struct.device*) #1

declare dso_local i32 @__acpi_match_device(i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @acpi_companion_match(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
